# ControllerOrchestra

./: .gitignore  CMakeLists.txt  README.md  constants.h  joycon.hpp rumble vals to freqs.txt  main.cpp  midi note to joycon.hpp rumble vals.txt
controllers/: Controller.h  PS5Controller.cpp  PS5Controller.h  SteamController.cpp  SteamController.h  SwitchController.cpp  SwitchController.h
libs/: joycon.hpp
midifile/: CMakeLists.txt  midifile.c
